<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.dzmitry_lakisau.hw02.CalculatorActivity">

    <Button
        android:id="@+id/plus_button"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="+"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/input_field_editText"
        app:layout_constraintTop_toBottomOf="@+id/result_textView"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="-"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/plus_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_textView"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="*"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_button"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="/"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/multiply_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/evaluate_button"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_field_editText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/evaluate_button"
        android:layout_width="121dp"
        android:layout_height="292dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="="
        app:layout_constraintLeft_toRightOf="@+id/minus_button"
        app:layout_constraintTop_toBottomOf="@+id/result_textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="98dp" />

    <EditText
        android:id="@+id/input_field_editText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>